GetEvent changes + CORS fix
